citing the slide that continues the house/apartment metaphor

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -115,6 +115,8 @@ Containers are like apartments
 - There are many apartments in a single building
 - Apartments share access to many key components, eg: plumbling, electrical
 
+.footnote[[Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)]
+
 ---
 
 # Containers != VMs, cont'd
