--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -889,12 +889,16 @@ Notice sometimes we have to jump through some hoops to install dependencies diff
 - [Dockerfile Reference](https://docs.docker.com/engine/reference/builder/)
 - Video: [Jerome Petazzoni, AJ Bowen," Deploy and Scale Containers with Docker Native, Open Source Orchestration" - PyCon 2017](https://www.youtube.com/watch?v=EuzoEaE6Cqs)
 - Video: [Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)
+- The Dockercon youtube playlists - a bunch of great talks
+- If your language operandi has a convention I'd highly recommend looking up talks Docker may have given there, a lot of communities have been embracing Docker and doing cool language-specific stuff with it. 
 
 ???
 
 The talks may be a bit lengthy, but are totally worth it
 
 Look up the Dockercon youtube playlists, watch anything that looks interesting
+
+Pycon also has some great talks, if you're into Python
 
 Don't be afraid to follow along
 
