Adding link to the dockerhub to additional resources, as well as a link to where to find the talk online, in the talk itself

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -887,10 +887,13 @@ Notice sometimes we have to jump through some hoops to install dependencies diff
 - .remark-inline-code[docker build --help]
     - Really all the help documentation is great
 - [Dockerfile Reference](https://docs.docker.com/engine/reference/builder/)
+- [DockerHub](https://hub.docker.com/)
 - Video: [Jerome Petazzoni, AJ Bowen," Deploy and Scale Containers with Docker Native, Open Source Orchestration" - PyCon 2017](https://www.youtube.com/watch?v=EuzoEaE6Cqs)
 - Video: [Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)
 - The Dockercon youtube playlists - a bunch of great talks
 - If your language operandi has a convention I'd highly recommend looking up talks Docker may have given there, a lot of communities have been embracing Docker and doing cool language-specific stuff with it. 
+
+- These slides are available online via [bnbalsamo.github.io](bnbalsamo.github.io)
 
 ???
 
