Adding bash syntax highlighting to stuff, so it stands out more against the background

--- a/_presentations/Semantic Versioning.html
+++ b/_presentations/Semantic Versioning.html
@@ -96,13 +96,13 @@ class: center, middle
 
 [bumpversion](https://github.com/peritus/bumpversion)
 
-```
+```bash
 bumpversion [options] part [file]
 ```
 
 or a config file: .bumpversion.cfg
 
-```
+```bash
 [bumpversion]
 current_version = 0.1.0
 
