Adding a $ so people know its a bash prompt

--- a/_presentations/Semantic Versioning.html
+++ b/_presentations/Semantic Versioning.html
@@ -97,7 +97,7 @@ class: center, middle
 [bumpversion](https://github.com/peritus/bumpversion)
 
 ```bash
-bumpversion [options] part [file]
+$ bumpversion [options] part [file]
 ```
 
 or a config file: .bumpversion.cfg
